// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot for an existing admin user 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2"
          >
            user
          </a>
        </li>
      </ul>
    </nav>
    <h3
      class="title"
    >
      Edit user 'user'
    </h3>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="name"
        >
          Name
        </label>
        <div
          class="control"
        >
          <input
            data-testid="name"
            name="name"
            type="text"
            value="user"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="userNameErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="password"
        >
          Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="isAdmin"
        >
          Is Admin
        </label>
        <div
          class="control"
        >
          <input
            data-testid="isAdmin"
            name="isAdmin"
            type="checkbox"
            value="true"
          />
        </div>
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            UPDATE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button is-danger"
            data-testid="delete"
            type="button"
          >
            DELETE
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot for an existing non admin user 1`] = `
<DocumentFragment>
  <div
    class="container"
  >
    <nav
      aria-label="breadcrumbs"
      class="breadcrumb"
    >
      <ul>
        <li>
          <a
            href="/"
          >
            Home
          </a>
        </li>
        <li>
          <a
            href="/users"
          >
            Users
          </a>
        </li>
        <li
          class="is-active"
        >
          <a
            aria-current="page"
            href="/users/2"
          >
            user
          </a>
        </li>
      </ul>
    </nav>
    <h3
      class="title"
    >
      Edit user 'user'
    </h3>
    <form
      action="#"
    >
      <div
        class="field"
      >
        <label
          class="label"
          for="name"
        >
          Name
        </label>
        <div
          class="control"
        >
          <input
            data-testid="name"
            name="name"
            type="text"
            value="user"
          />
        </div>
        <p
          class="help is-danger"
          data-testid="userNameErrors"
        />
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="password"
        >
          Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="password"
            name="password"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="confirmPassword"
        >
          Confirm Password
        </label>
        <div
          class="control"
        >
          <input
            data-testid="confirmPassword"
            name="confirmPassword"
            type="password"
            value=""
          />
        </div>
      </div>
      <div
        class="field"
      >
        <label
          class="label"
          for="isAdmin"
        >
          Is Admin
        </label>
        <div
          class="control"
        >
          <input
            data-testid="isAdmin"
            name="isAdmin"
            type="checkbox"
            value="false"
          />
        </div>
      </div>
      <div
        class="field is-grouped"
      >
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="submit"
            type="submit"
          >
            UPDATE
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button"
            data-testid="cancel"
            type="button"
          >
            CANCEL
          </button>
        </p>
        <p
          class="control"
        >
          <button
            class="button is-danger"
            data-testid="delete"
            type="button"
          >
            DELETE
          </button>
        </p>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
